130-traccar/30-traccar-service-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: traccar
  labels:
    app: traccar
    kubernetes.io/name: "traccar"
  annotations:
    metallb.universe.tf/allow-shared-ip: metallb-traccar-key
spec:
  selector:
    app: traccar
  ports:
    - name: traccar
      protocol: TCP
      port: 8082
      targetPort: 8082
    - name: traccar-5055-tcp
      port: 5055
      targetPort: 5055
      protocol: TCP
  type: LoadBalancer
  loadBalancerIP: 192.168.0.72
