130-traccar/40-traccar-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  name: traccar
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: traccar.int.volfoni.org
    http:
      paths:
      - path: /
        backend:
          serviceName: traccar
          servicePort: 8082
  tls:
   - secretName: wildcard-int-volfoni-org-tls
